producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: producer
  name: producer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: producer
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/rabbitmqquickstartproducer_rabbitmq-quickstart-network: "true"
        io.kompose.service: producer
    spec:
      containers:
      - env:
        - name: RABBITMQ_HOST
          value: rabbit
        - name: RABBITMQ_PORT
          value: "5672"
        image: javier/quarkus/rabbitmq-quickstart-producer:latest
        imagePullPolicy: ""
        name: producer
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
