rabbit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbit
  name: rabbit
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbit
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/rabbitmqquickstartproducer_rabbitmq-quickstart-network: "true"
        io.kompose.service: rabbit
    spec:
      containers:
      - image: rabbitmq:3.12-management
        imagePullPolicy: ""
        name: rabbit
        ports:
        - containerPort: 5672
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
